--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ sudo: false
 notifications:
   recipients:
     - self@falood.me
+before_install:
+  - sudo apt-get install inotify-tools
 before_script:
   - mix deps.get --only test
